Some changes to the build system and the main source files.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -29,7 +29,9 @@
 				"kind": "build",
 				"isDefault": true
 			},
-			"problemMatcher": ["$gcc"]
+			"problemMatcher": [
+				"$gcc"
+			]
 		}
 	]
 }
