Fix: Correcciones críticas para integración IODevice
- Agregar includes necesarios en cpu.hpp (<vector>, <memory>, io_device.hpp)
- Implementar métodos ReadMemory/WriteMemory con soporte IODevice
- Actualizar todas las instrucciones (LDA, STA, AND, EOR, etc.) para usar ReadMemory/WriteMemory
- Agregar STA Absolute (0x8D) al dispatcher legacy
- Actualizar CMakeLists.txt para incluir apple_io.cpp y directorios de inc/
- Crear ejecutable apple_io_demo
- Eliminar main() duplicado en test_apple_io.cpp
- Actualizar test_apple_io.cpp para usar la arquitectura correcta
- TODOS LOS TESTS PASAN: 75/75 exitosos

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ set(LIB_SOURCES
     cpu/instructions.cpp
     mem/mem.cpp
     util/logger.cpp
+    devices/apple_io.cpp
 )
 
 # Crear la librería estática
@@ -13,6 +14,8 @@ add_library(cpu6502_lib STATIC ${LIB_SOURCES})
 # Especificar directorios de inclusión para la librería
 target_include_directories(cpu6502_lib PUBLIC
     ${PROJECT_SOURCE_DIR}/include
+    ${PROJECT_SOURCE_DIR}/inc
+    ${PROJECT_SOURCE_DIR}/src/devices
 )
 
 # Crear el ejecutable de demostración
@@ -23,3 +26,19 @@ target_link_libraries(cpu_demo cpu6502_lib)
 
 # Establecer el nombre de salida del ejecutable
 set_target_properties(cpu_demo PROPERTIES OUTPUT_NAME cpu_demo)
+
+# Crear el ejecutable de ejemplo de Apple IO
+add_executable(apple_io_demo ${PROJECT_SOURCE_DIR}/examples/apple_io_demo.cpp)
+
+# Enlazar el ejecutable con la librería
+target_link_libraries(apple_io_demo cpu6502_lib)
+
+# Especificar directorios de inclusión para el demo
+target_include_directories(apple_io_demo PRIVATE
+    ${PROJECT_SOURCE_DIR}/include
+    ${PROJECT_SOURCE_DIR}/inc
+    ${PROJECT_SOURCE_DIR}/src/devices
+)
+
+# Establecer el nombre de salida del ejecutable
+set_target_properties(apple_io_demo PROPERTIES OUTPUT_NAME apple_io_demo)
