feat: Integración de E/S Apple II (teclado y pantalla) (#21)
* feat: integración completa de E/S Apple II

- Añadida interfaz abstracta IODevice para dispositivos modulares
- Implementada clase AppleIO para simular teclado () y pantalla ()
- Modificada CPU para soportar registro/desregistro de IODevices
- CPU intercepta lecturas/escrituras antes de acceder a memoria
- Añadido ejemplo funcional en examples/apple_io_demo.cpp
- Añadidos tests automáticos con GoogleTest en tests/test_apple_io.cpp
- Actualizada documentación en README, architecture y instructions
- API pública: cpu.registerIODevice() y cpu.unregisterIODevice()

Closes #9

* Fix: Correcciones críticas para integración IODevice

- Agregar includes necesarios en cpu.hpp (<vector>, <memory>, io_device.hpp)
- Implementar métodos ReadMemory/WriteMemory con soporte IODevice
- Actualizar todas las instrucciones (LDA, STA, AND, EOR, etc.) para usar ReadMemory/WriteMemory
- Agregar STA Absolute (0x8D) al dispatcher legacy
- Actualizar CMakeLists.txt para incluir apple_io.cpp y directorios de inc/
- Crear ejecutable apple_io_demo
- Eliminar main() duplicado en test_apple_io.cpp
- Actualizar test_apple_io.cpp para usar la arquitectura correcta
- TODOS LOS TESTS PASAN: 75/75 exitosos

* Refactor: Reorganizar headers a estructura estándar

- Mover io_device.hpp de inc/ a include/
- Mover apple_io.hpp de src/devices/ a include/devices/
- Actualizar todos los #include para usar paths relativos correctos
- Simplificar CMakeLists.txt eliminando directorios redundantes
- Eliminar directorio inc/ vacío
- Mantener estructura estándar: headers públicos en include/, implementación en src/
- ✅ 75/75 tests pasan correctamente

* fix: Apple II I/O demo and CPU debug logging

Extended Description:
- Added detailed per-iteration DEBUG logs to src/cpu/cpu.cpp to trace PC/opcode/cycles/registers.
- Fixed branch offset in examples/apple_io_demo.cpp that caused opcode 0x05 warnings.
- Improved logger behavior so DEBUG messages are emit

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,6 +20,7 @@ endif()
 set(TEST_SOURCES
     test_main.cpp
     instruction_handlers_test.cpp
+    test_apple_io.cpp
 )
 
 # Crear ejecutable de test
