ci: sincroniza triggers y versiones en workflows de CI y CodeQL

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,8 @@ name: CI
 
 on:
   push:
+    branches: [ master, develop, copilot/** ]
   pull_request:
-    branches: [ master, develop ]
     branches: [ master, develop ]
 
 jobs:
