--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,9 +2,9 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ develop, master ]
+    branches: [ master, develop ]
   pull_request:
-    branches: [ develop, master ]
+    branches: [ master, develop ]
   schedule:
     - cron: '0 0 * * 0'
 
