CI: Preparar red para Copilot (DNS/HTTPS) antes de instalaciones

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,17 @@ jobs:
       with:
         submodules: recursive
 
+    - name: Preparar red para Copilot (DNS/HTTPS)
+      run: |
+        set -eux
+        echo "Verificando resolución DNS y salida HTTPS"
+        nslookup api.githubcopilot.com || true
+        curl -I https://api.githubcopilot.com || true
+        curl -I https://github.com || true
+        curl -I https://azure.archive.ubuntu.com || true
+        curl -I https://packages.microsoft.com || true
+        sudo apt-get update
+
     - name: Install dependencies
       run: |
         set -eux
