Docs: add debugger guide; Integrate Debugger with CPU; add tests and build wiring

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ set(LIB_SOURCES
     cpu/instructions.cpp
     mem/mem.cpp
     util/logger.cpp
+    debugger.cpp
     devices/apple_io.cpp
     devices/file_device.cpp
     devices/text_screen.cpp
