WOZMON & Apple 1 Integration: 65C02 full test coverage, new devices, and documentation
- Integración completa de WOZMON y Apple 1 Monitor en el emulador 6502
- Soporte de dispositivos I/O modulares (PIA, ACIA, VIA)
- Añadido soporte para submódulo msbasic (Microsoft BASIC)
- Nuevos tests: cobertura de instrucciones, timing, memory map, integración Apple I/O
- Nuevos dispositivos: ACIA (serial), VIA (puerto), y binario de ROM WOZMON
- Mejoras en la documentación: README, WOZMON_README, wozmon_integration.md
- Refactorización de cpu.cpp y cabeceras para soporte extendido
- Corrección de bugs en el manejo de opcodes no implementados y vectores
- Planificación y reportes de fases de integración y validación
- Actualización de CMake y scripts de build para nuevos dispositivos y tests

Ver detalles en CHANGELOG.md y docs/wozmon_integration.md

[Tests: passing, full coverage]
[Documentación revisada y actualizada]
[Incluye binarios y cabeceras nuevas]
[msbasic aún no como submódulo oficial]

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,6 +20,9 @@ endif()
 set(TEST_SOURCES
     test_main.cpp
     instruction_handlers_test.cpp
+    instruction_set_coverage_test.cpp
+    timing_validation_test.cpp
+    memory_map_test.cpp
     test_apple_io.cpp
     test_file_device.cpp
     test_text_screen.cpp
