Refactorización y limpieza mayor de arquitectura:
- Reorganización de todos los headers en subcarpetas lógicas (cpu/, devices/, debugger/, mem/, scripting/, etc.) para mayor claridad y mantenibilidad.
- Actualización masiva de rutas de includes en fuentes, ejemplos y tests para reflejar la nueva estructura.
- Corrección de errores de compilación y enlaces tras el movimiento de headers.
- Limpieza de duplicidad de definiciones de instrucciones y centralización de lógica de CPU.
- Optimización de rutinas de entrada/salida en BIOS y eliminación de retardos innecesarios.
- Eliminación de trazas [TRACE] en la CPU para salida más limpia.
- Validación de integración WOZMON/BASIC y revisión de vectores de arranque.
- Ejemplos y tests actualizados y compilando correctamente.

Este commit deja la base del emulador y sus ejemplos en un estado coherente, modular y listo para nuevas extensiones o depuración avanzada.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -176,6 +176,20 @@ target_include_directories(wozmon_demo PRIVATE
 
 # Establecer el nombre de salida del ejecutable
 set_target_properties(wozmon_demo PROPERTIES OUTPUT_NAME wozmon_demo)
+
+# Crear el ejecutable de WOZMON Serial demo
+add_executable(wozmon_serial_demo ${PROJECT_SOURCE_DIR}/examples/wozmon_serial_demo.cpp)
+
+# Enlazar el ejecutable con la librería
+target_link_libraries(wozmon_serial_demo cpu6502_lib)
+
+# Especificar directorios de inclusión para el demo
+target_include_directories(wozmon_serial_demo PRIVATE
+    ${PROJECT_SOURCE_DIR}/include
+)
+
+# Establecer el nombre de salida del ejecutable
+set_target_properties(wozmon_serial_demo PROPERTIES OUTPUT_NAME wozmon_serial_demo)
 # Crear el ejecutable de BASIC trace demo
 add_executable(basic_trace_demo ${PROJECT_SOURCE_DIR}/examples/basic_trace_demo.cpp)
 
