Checkpoint from VS Code for cloud agent session

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 # Archivos fuente de la librería
+
 set(LIB_SOURCES
     cpu/cpu.cpp
     cpu/addressing.cpp
@@ -8,6 +9,7 @@ set(LIB_SOURCES
     debugger/debugger.cpp
     scripting/scripting_api.cpp
     devices/apple_io.cpp
+    devices/c64_io.cpp
     devices/file_device.cpp
     devices/text_screen.cpp
     devices/basic_audio.cpp
@@ -15,6 +17,7 @@ set(LIB_SOURCES
     devices/basic_timer.cpp
     interrupt/interrupt_controller.cpp
     gui/emulator_gui.cpp
+    main/system_map.cpp
 )
 
 
@@ -159,3 +162,17 @@ target_include_directories(interrupt_demo PRIVATE
 
 # Establecer el nombre de salida del ejecutable
 set_target_properties(interrupt_demo PROPERTIES OUTPUT_NAME interrupt_demo)
+
+# Crear el ejecutable principal `emulator` a partir de src/main.cpp
+add_executable(emulator ${PROJECT_SOURCE_DIR}/src/main/main.cpp)
+
+# Enlazar el ejecutable con la librería principal
+target_link_libraries(emulator cpu6502_lib)
+
+# Especificar directorios de inclusión para el ejecutable
+target_include_directories(emulator PRIVATE
+    ${PROJECT_SOURCE_DIR}/include
+)
+
+# Establecer el nombre de salida del ejecutable
+set_target_properties(emulator PROPERTIES OUTPUT_NAME emulator)
