Mejoras en I/O, refactoring y sistema de logs
- Corregir problemas de I/O en Basic/Wozmon:
  - Eliminar eco automático en CHRIN (bios.s)
  - Ignorar LF (0x0A) para evitar dobles saltos de línea
  - No mostrar caracteres no imprimibles como <0x0A>

- Limpieza de código obsoleto:
  - Eliminar apple_io y todas sus referencias
  - Eliminar cpu_demo (no usado)

- Reorganización:
  - Mover system_map a cpu/ (mejor organización)
  - Actualizar todos los includes correspondientes

- Sistema de logs mejorado:
  - Implementar rotación de archivos de log
  - Configurar 5 archivos de 10MB cada uno
  - Logs guardados en build/logs/cpu.log.x
  - Fallback a consola si no hay archivo configurado

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,6 @@ set(LIB_SOURCES
     util/logger.cpp
     debugger/debugger.cpp
     scripting/scripting_api.cpp
-    devices/apple_io.cpp
     devices/c64_io.cpp
     devices/file_device.cpp
     devices/text_screen.cpp
@@ -17,7 +16,7 @@ set(LIB_SOURCES
     devices/basic_timer.cpp
     interrupt/interrupt_controller.cpp
     gui/emulator_gui.cpp
-    main/system_map.cpp
+    cpu/system_map.cpp
 )
 
 
@@ -39,29 +38,6 @@ target_include_directories(cpu6502_lib PUBLIC
 
 # Link SDL2 and pybind11 to the library
 target_link_libraries(cpu6502_lib PUBLIC ${SDL2_LIBRARIES} pybind11::module)
-
-# Crear el ejecutable de demostración
-add_executable(cpu_demo main/cpu_demo.cpp)
-
-# Enlazar el ejecutable con la librería
-target_link_libraries(cpu_demo cpu6502_lib)
-
-# Establecer el nombre de salida del ejecutable
-set_target_properties(cpu_demo PROPERTIES OUTPUT_NAME cpu_demo)
-
-# Crear el ejecutable de ejemplo de Apple IO
-add_executable(apple_io_demo ${PROJECT_SOURCE_DIR}/examples/apple_io_demo.cpp)
-
-# Enlazar el ejecutable con la librería
-target_link_libraries(apple_io_demo cpu6502_lib)
-
-# Especificar directorios de inclusión para el demo
-target_include_directories(apple_io_demo PRIVATE
-    ${PROJECT_SOURCE_DIR}/include
-)
-
-# Establecer el nombre de salida del ejecutable
-set_target_properties(apple_io_demo PROPERTIES OUTPUT_NAME apple_io_demo)
 
 # Crear el ejecutable de ejemplo de FileDevice
 add_executable(file_device_demo ${PROJECT_SOURCE_DIR}/examples/file_device_demo.cpp)
