Refactor: eliminar demos y centralizar logs de la CPU en build/logs\n\n- Eliminado directorio examples/ y targets de demos en src/CMakeLists.txt\n- Eliminado logger del emulador (src/main/main.cpp) y fichero cpu.log\n- Centralizada salida de logs de la CPU en build/logs/: cambios en src/cpu/cpu.cpp y util/logger.cpp\n- Ajustado tamaño de rotación a 10MB en include/cpu.hpp\n- Eliminados logs antiguos sueltos en build/ (limpieza)\n- Compilación verificada localmente con make\n\nDetalles: ver cambios en el repositorio para archivos modificados y pruebas locales.\n

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,105 +39,7 @@ target_include_directories(cpu6502_lib PUBLIC
 # Link SDL2 and pybind11 to the library
 target_link_libraries(cpu6502_lib PUBLIC ${SDL2_LIBRARIES} pybind11::module)
 
-# Crear el ejecutable de ejemplo de FileDevice
-add_executable(file_device_demo ${PROJECT_SOURCE_DIR}/examples/file_device_demo.cpp)
-
-# Enlazar el ejecutable con la librería
-target_link_libraries(file_device_demo cpu6502_lib)
-
-# Especificar directorios de inclusión para el demo
-target_include_directories(file_device_demo PRIVATE
-    ${PROJECT_SOURCE_DIR}/include
-)
-
-# Establecer el nombre de salida del ejecutable
-set_target_properties(file_device_demo PROPERTIES OUTPUT_NAME file_device_demo)
-
-# Crear el ejecutable de ejemplo de TextScreen
-add_executable(text_screen_demo ${PROJECT_SOURCE_DIR}/examples/text_screen_demo.cpp)
-
-# Enlazar el ejecutable con la librería
-target_link_libraries(text_screen_demo cpu6502_lib)
-
-# Especificar directorios de inclusión para el demo
-target_include_directories(text_screen_demo PRIVATE
-    ${PROJECT_SOURCE_DIR}/include
-)
-
-# Establecer el nombre de salida del ejecutable
-set_target_properties(text_screen_demo PROPERTIES OUTPUT_NAME text_screen_demo)
-
-# Crear el ejecutable de GUI demo
-add_executable(gui_demo ${PROJECT_SOURCE_DIR}/examples/gui_demo.cpp)
-
-# Enlazar el ejecutable con la librería y SDL2
-target_link_libraries(gui_demo cpu6502_lib ${SDL2_LIBRARIES})
-
-# Especificar directorios de inclusión para el demo
-target_include_directories(gui_demo PRIVATE
-    ${PROJECT_SOURCE_DIR}/include
-    ${SDL2_INCLUDE_DIRS}
-)
-
-# Establecer el nombre de salida del ejecutable
-set_target_properties(gui_demo PROPERTIES OUTPUT_NAME gui_demo)
-
-# Crear el ejecutable de screenshot demo
-add_executable(screenshot_demo ${PROJECT_SOURCE_DIR}/examples/screenshot_demo.cpp)
-
-# Enlazar el ejecutable con la librería y SDL2
-target_link_libraries(screenshot_demo cpu6502_lib ${SDL2_LIBRARIES})
-
-# Especificar directorios de inclusión para el demo
-target_include_directories(screenshot_demo PRIVATE
-    ${PROJECT_SOURCE_DIR}/include
-    ${SDL2_INCLUDE_DIRS}
-)
-
-# Establecer el nombre de salida del ejecutable
-set_target_properties(screenshot_demo PROPERTIES OUTPUT_NAME screenshot_demo)
-
-# Crear el ejecutable de audio demo
-add_executable(audio_demo ${PROJECT_SOURCE_DIR}/examples/audio_demo.cpp)
-
-# Enlazar el ejecutable con la librería
-target_link_libraries(audio_demo cpu6502_lib)
-
-# Especificar directorios de inclusión para el demo
-target_include_directories(audio_demo PRIVATE
-    ${PROJECT_SOURCE_DIR}/include
-)
-
-# Establecer el nombre de salida del ejecutable
-set_target_properties(audio_demo PROPERTIES OUTPUT_NAME audio_demo)
-
-# Crear el ejecutable de TCP Serial demo
-add_executable(tcp_serial_demo ${PROJECT_SOURCE_DIR}/examples/tcp_serial_demo.cpp)
-
-# Enlazar el ejecutable con la librería
-target_link_libraries(tcp_serial_demo cpu6502_lib)
-
-# Especificar directorios de inclusión para el demo
-target_include_directories(tcp_serial_demo PRIVATE
-    ${PROJECT_SOURCE_DIR}/include
-)
-
-# Establecer el nombre de salida del ejecutable
-set_target_properties(tcp_serial_demo PROPERTIES OUTPUT_NAME tcp_serial_demo)
-
-# Crear el ejecutable de Interrupt demo
-add_executable(interrupt_demo ${PROJECT_SOURCE_DIR}/examples/interrupt_demo.cpp)
-
-# Enlazar el ejecutable con la librería
-target_link_libraries(interrupt_demo cpu6502_lib)
-
-# Especificar directorios de inclusión para el demo
-target_include_directories(interrupt_demo PRIVATE
-    ${PROJECT_SOURCE_DIR}/include
-)
-
-# Establecer el nombre de salida del ejecutable
-set_target_properties(interrupt_demo PROPERTIES OUTPUT_NAME interrupt_demo)
+# (Eliminados todos los ejecutables de ejemplo en examples/)
 
 # Crear el ejecutable principal `emulator` a partir de src/main.cpp
 add_executable(emulator ${PROJECT_SOURCE_DIR}/src/main/main.cpp)
